# xdiff

./: .gitignore  Cargo.toml
examples/: similar-terminal-inline.rs
